# VerifiedJS

./: .gitignore  ARCHITECTURE.md  PROGRESS.md  README.md  TASKS.md  pyproject.toml
MEMORY/: AGENTS.md
VerifiedJS/: Driver.lean
VerifiedJS/ANF/: Convert.lean  Semantics.lean  Syntax.lean
VerifiedJS/Core/: Elaborate.lean  Interp.lean  Semantics.lean  Syntax.lean
VerifiedJS/Flat/: ClosureConvert.lean  Semantics.lean  Syntax.lean
VerifiedJS/Proofs/: ANFConvertCorrect.lean  ClosureConvertCorrect.lean  LowerCorrect.lean
VerifiedJS/Runtime/: Values.lean
VerifiedJS/Source/: AST.lean  Lexer.lean  Parser.lean  Print.lean
VerifiedJS/Wasm/: Emit.lean  IRInterp.lean  Lower.lean  Semantics.lean
agents/: __init__.py  verified_compiler_agents.py
monitoring/: README.md  run_monitor.sh
monitoring/backend/: app.py
monitoring/frontend/: index.html  package-lock.json  package.json  vite.config.js
monitoring/frontend/src/: App.svelte  app.css  main.js
scripts/: agent_supervisor.sh  lake_build_concise.sh  parse_flagship.sh  parse_flagship_failfast.sh  run_test262_compare.sh
tests/: run_tests.sh
tests/unit/: Tests.lean
tests/unit/Tests/: ParserTests.lean
