[project]
name = "verifiedjs-agents"
version = "0.1.0"
description = "Multi-agent choreography for verified JS-to-Wasm compiler development"
requires-python = ">=3.12"
dependencies = [
    "effectful[llm] @ git+https://github.com/BasisResearch/effectful.git@kg-multi-agent-epp",
    "flask>=3.1.3",
]

[project.scripts]
verifiedjs-agents = "agents.verified_compiler_agents:main"
verifiedjs-monitor = "monitoring.backend.app:main"
